noinst_LIBRARIES = librender.a

librender_a_SOURCES = fontinstance.cpp glextensions.cpp linestipple.cpp linestyle.cpp primitive.cpp primitiveinfo.cpp primitiveinstance.cpp primitivelist.cpp surface.cpp surface_grid.cpp surface_linexy.cpp surface_linezy.cpp surface_full.cpp textprimitive.cpp vertexchunk.cpp

noinst_HEADERS = fontinstance.h glextensions.h linestipple.h linestyle.h primitive.h primitiveinfo.h primitiveinstance.h primitivelist.h surface.h textprimitive.h vertexchunk.h

INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/gui @GUI_CFLAGS@

