add_library(session
  editstate.cpp
  editstate_axes.cpp
  editstate_collection.cpp
  editstate_viewpane.cpp
  editstatedata.cpp
  editstategroup.cpp
  keywords.cpp
  load.cpp
  save.cpp
  session.cpp
  editstate.h
  editstatedata.h
  editstategroup.h
  session.h
)

include_directories(
../
${CMAKE_SOURCE_DIR}
${CMAKE_BINARY_DIR}
${CMAKE_BINARY_DIR}/src
)
