noinst_LIBRARIES = libsession.a

libsession_a_SOURCES = editstate.cpp editstatedata.cpp editstate_axes.cpp editstate_collection.cpp editstate_viewpane.cpp editstategroup.cpp keywords.cpp load.cpp save.cpp session.cpp

noinst_HEADERS = editstate.h editstatedata.h editstategroup.h session.h

libsession_a_CPPFLAGS = -I$(top_srcdir)/src -I../ @UCHROMA_CFLAGS@
